--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
+/* common css start */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif; */
+  font-family: "Roboto Mono", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  padding: 0;
+  margin: 0;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+button {
+  border: none;
+  border-radius: 1rem;
+  padding: 5px 10px;
+  box-shadow: 0px 0px 10px 0px #b8b8b8;
+  border: 1px solid #dbdbdb;
+  width: fit-content;
+}
+button:active {
+  box-shadow: none;
+}
+
+.container {
+  width: 40rem;
+  margin: 50px auto;
+}
+/* end of common css */
+
+/* profile card css start */
+.profile-card {
+  height: auto;
+  border: 0.5rem solid #2d2d2d;
+  border-radius: 0.2rem;
+  color: #252525;
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+}
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-body {
+  padding: 40px;
+}
+
+.card-body h1 {
+  margin-bottom: 20px;
+  font-size: 40px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.card-body p {
+  font-size: 20px;
+}
+.card-body .skill {
+  width: fit-content;
+  padding: 3px 20px;
+  border-radius: 0.4rem;
+}
+.card-body .skill span {
+  font-weight: 600;
+}
+.card-body .skillList {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.8rem;
+  padding-top: 20px;
+}
+/* profile card css end */
+
+/* data counter css start */
+.date_counter {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.date_counter .step,
+.date_counter .counter {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+/* data counter css end */
